--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <p class="card-text">
               This is some sample text for the first article. The full content
               of the article could be displayed here. Feel free to add more
-              content and style it as needed.
+              content and style it as needed..
             </p>
             <button class="btn btn-primary">Read More</button>
           </div>
